--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.23.26",
     "next": "16.1.1",
     "next-pwa": "^5.6.0",
